--- a/demo/index.html
+++ b/demo/index.html
@@ -5,7 +5,10 @@
     <title>React CountUp.js</title>
     <script type="text/javascript">
       WebFontConfig = {
-        google: { families: [ 'Source+Sans+Pro:300,400,700:latin' ] }
+        google: { families: [
+          'Inconsolata:400,700:latin',
+          'Source+Sans+Pro:300,400,700:latin'
+        ] }
       };
       (function() {
         var wf = document.createElement('script');
