--- a/demo/index.html
+++ b/demo/index.html
@@ -2,7 +2,10 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>React CountUp.js</title>
+    <meta name="author" content="Glenn Reyes">
+    <meta name="description" content="A React component wrapper around CountUp.js.">
     <script type="text/javascript">
       WebFontConfig = {
         google: { families: [
@@ -17,7 +20,8 @@
         wf.async = 'true';
         var s = document.getElementsByTagName('script')[0];
         s.parentNode.insertBefore(wf, s);
-      })(); </script>
+      })();
+    </script>
   </head>
   <body>
     <div id="root"></div>
