Fix document title

--- a/demo/index.html
+++ b/demo/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <title>React CountUp.js</title>
+    <title>React CountUp</title>
     <meta name="author" content="Glenn Reyes">
     <meta name="description" content="A React component wrapper around CountUp.js.">
     <script type="text/javascript">
